# z-fast

./: README.md  netlify.toml
desktop-app/: .gitignore  README.md  index.html  package.json  vite.config.js
desktop-app/python-backend/: main.py  requirements.txt
desktop-app/src/: App.jsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
landing-page/: README.md  index.html  package.json  vite.config.js
landing-page/src/: App.jsx  index.css
web-app/: .gitignore  DEPLOYMENT.md  README.md  deploy-to-netlify.sh
web-app/backend/: main.py  requirements.txt
web-app/frontend/: .env.example  README.md  index.html  netlify.toml  package.json  vite.config.js
web-app/frontend/src/: App.jsx  index.css
